transaction api update chart