@@ -1,3 +1,4 @@
+// src/main/java/com/finance/transaction/service/TransactionService.java
 package com.finance.transaction.service;
 
 import java.math.BigDecimal;
@@ -5,8 +6,10 @@ import java.time.LocalDateTime;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
+import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -16,6 +19,9 @@ import com.finance.category.entity.UserCategory;
 import com.finance.category.repository.UserCategoryRepository;
 import com.finance.kafka.dto.TransactionEventDTO;
 import com.finance.kafka.producer.TransactionEventPublisher;
+import com.finance.transaction.dto.MonthlyCardsResponse;
+import com.finance.transaction.dto.TimeseriesPoint;
+import com.finance.transaction.dto.TimeseriesResponse;
 import com.finance.transaction.dto.TransactionMapper;
 import com.finance.transaction.dto.TransactionRequest;
 import com.finance.transaction.dto.TransactionResponse;
@@ -25,10 +31,10 @@ import com.finance.transaction.entity.TransactionSpecification;
 import com.finance.transaction.entity.TransactionType;
 import com.finance.transaction.port.RecurringPostingPort;
 import com.finance.transaction.repository.TransactionRepository;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
-
-import lombok.RequiredArgsConstructor;
+import com.finance.transaction.repository.TransactionRepository.Kpis2;
+import com.finance.transaction.repository.TransactionRepository.Kpis3;
+import com.finance.transaction.repository.TransactionRepository.LabelAmount;
+import com.finance.transaction.repository.TransactionRepository.TimeseriesRow;
 
 @Service
 @RequiredArgsConstructor
@@ -38,48 +44,40 @@ public class TransactionService implements RecurringPostingPort {
     private final UserCategoryRepository userCategoryRepository;
     private final TransactionEventPublisher transactionEventPublisher;
 
-
     // ================== CRUD ==================
 
     @Transactional
     public TransactionResponse createTransaction(TransactionRequest request) {
         User user = SecurityUtils.getCurrentUser();
 
-        // Bảo vệ: category phải thuộc đúng user
         UserCategory userCategory = userCategoryRepository
-                .findByIdAndUserId(request.getUserCategoryId(), user.getId())
-                .orElseThrow(() -> new RuntimeException(
-                        "UserCategory không thuộc user (id=" + request.getUserCategoryId() + ")"));
+            .findByIdAndUserId(request.getUserCategoryId(), user.getId())
+            .orElseThrow(() -> new RuntimeException(
+                "UserCategory không thuộc user (id=" + request.getUserCategoryId() + ")"));
 
-        Transaction transaction = new Transaction();
-        transaction.setAmount(request.getAmount());
-        transaction.setType(request.getType());
-        transaction.setPaymentMethod(
-                request.getPaymentMethod() != null ? request.getPaymentMethod() : PaymentMethod.CASH
-        );
-        transaction.setNote(request.getNote());
-        transaction.setTransactionDate(
-                request.getTransactionDate() != null ? request.getTransactionDate() : LocalDateTime.now()
-        );
-        transaction.setUser(user);
-        transaction.setUserCategory(userCategory);
+        Transaction tx = new Transaction();
+        tx.setAmount(request.getAmount());
+        tx.setType(request.getType());
+        tx.setPaymentMethod(request.getPaymentMethod() != null ? request.getPaymentMethod() : PaymentMethod.CASH);
+        tx.setNote(request.getNote());
+        tx.setTransactionDate(request.getTransactionDate() != null ? request.getTransactionDate() : LocalDateTime.now());
+        tx.setUser(user);
+        tx.setUserCategory(userCategory);
+
+        tx = transactionRepository.save(tx);
 
         transactionEventPublisher.publish(new TransactionEventDTO(
-        		transaction.getId(),
-                user.getId(),
-                transaction.getAmount(),
-                transaction.getType().name(),
-                transaction.getPaymentMethod().name(),
-                transaction.getTransactionDate()
+            tx.getId(), user.getId(), tx.getAmount(),
+            tx.getType().name(), tx.getPaymentMethod().name(), tx.getTransactionDate()
         ));
-        
-        return TransactionMapper.toResponse(transactionRepository.save(transaction));
+
+        return TransactionMapper.toResponse(tx);
     }
 
     @Transactional(readOnly = true)
     public TransactionResponse getTransactionById(Long id) {
         Transaction transaction = transactionRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Transaction not found with id " + id));
+            .orElseThrow(() -> new RuntimeException("Transaction not found with id " + id));
         return TransactionMapper.toResponse(transaction);
     }
 
@@ -87,41 +85,33 @@ public class TransactionService implements RecurringPostingPort {
     public List<TransactionResponse> getUserTransactions() {
         User user = SecurityUtils.getCurrentUser();
         return transactionRepository.findByUserId(user.getId()).stream()
-                .map(TransactionMapper::toResponse)
-                .collect(Collectors.toList());
+            .map(TransactionMapper::toResponse)
+            .toList();
     }
 
     @Transactional
     public TransactionResponse updateTransaction(Long id, TransactionRequest request) {
         User user = SecurityUtils.getCurrentUser();
 
-        Transaction transaction = transactionRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Transaction not found with id " + id));
+        Transaction tx = transactionRepository.findById(id)
+            .orElseThrow(() -> new RuntimeException("Transaction not found with id " + id));
 
-        // Nếu người dùng đổi category, đảm bảo category mới thuộc user hiện tại
         if (request.getUserCategoryId() != null
-                && (transaction.getUserCategory() == null
-                    || !request.getUserCategoryId().equals(transaction.getUserCategory().getId()))) {
+            && (tx.getUserCategory() == null || !request.getUserCategoryId().equals(tx.getUserCategory().getId()))) {
             UserCategory newCat = userCategoryRepository
-                    .findByIdAndUserId(request.getUserCategoryId(), user.getId())
-                    .orElseThrow(() -> new RuntimeException(
-                            "UserCategory không thuộc user (id=" + request.getUserCategoryId() + ")"));
-            transaction.setUserCategory(newCat);
+                .findByIdAndUserId(request.getUserCategoryId(), user.getId())
+                .orElseThrow(() -> new RuntimeException(
+                    "UserCategory không thuộc user (id=" + request.getUserCategoryId() + ")"));
+            tx.setUserCategory(newCat);
         }
 
-        transaction.setAmount(request.getAmount());
-        transaction.setType(request.getType());
-        transaction.setPaymentMethod(
-                request.getPaymentMethod() != null ? request.getPaymentMethod() : transaction.getPaymentMethod()
-        );
-        transaction.setNote(request.getNote());
-        transaction.setTransactionDate(
-                request.getTransactionDate() != null ? request.getTransactionDate() : transaction.getTransactionDate()
-        );
+        tx.setAmount(request.getAmount());
+        tx.setType(request.getType());
+        tx.setPaymentMethod(request.getPaymentMethod() != null ? request.getPaymentMethod() : tx.getPaymentMethod());
+        tx.setNote(request.getNote());
+        tx.setTransactionDate(request.getTransactionDate() != null ? request.getTransactionDate() : tx.getTransactionDate());
 
-        // KHÔNG còn set các field recurring (đã bỏ)
-
-        return TransactionMapper.toResponse(transactionRepository.save(transaction));
+        return TransactionMapper.toResponse(transactionRepository.save(tx));
     }
 
     @Transactional
@@ -145,12 +135,12 @@ public class TransactionService implements RecurringPostingPort {
 
         if (categoryId != null) {
             category = userCategoryRepository.findByIdAndUserId(categoryId, user.getId())
-                    .orElseThrow(() -> new RuntimeException("Category không thuộc user"));
+                .orElseThrow(() -> new RuntimeException("Category không thuộc user"));
         }
 
         return transactionRepository.findAll(
                 TransactionSpecification.withFilters(user, startDate, endDate, type, category, paymentMethod)
-        ).stream().map(TransactionMapper::toResponse).collect(Collectors.toList());
+        ).stream().map(TransactionMapper::toResponse).toList();
     }
 
     @Transactional(readOnly = true)
@@ -165,67 +155,145 @@ public class TransactionService implements RecurringPostingPort {
 
         if (categoryId != null) {
             category = userCategoryRepository.findByIdAndUserId(categoryId, user.getId())
-                    .orElseThrow(() -> new RuntimeException("Category không thuộc user"));
+                .orElseThrow(() -> new RuntimeException("Category không thuộc user"));
         }
 
         return transactionRepository.findAll(
-                TransactionSpecification.withFilters(user, startDate, endDate, type, category, paymentMethod),
-                pageable
+            TransactionSpecification.withFilters(user, startDate, endDate, type, category, paymentMethod),
+            pageable
         ).map(TransactionMapper::toResponse);
     }
 
     @Transactional(readOnly = true)
     public List<TransactionResponse> getLatestTransactions(int limit) {
         User user = SecurityUtils.getCurrentUser();
-        return transactionRepository.findTop5ByUserOrderByTransactionDateDesc(user)
-                .stream().limit(limit)
-                .map(TransactionMapper::toResponse)
-                .collect(Collectors.toList());
+        return transactionRepository.findTop10ByUserOrderByTransactionDateDesc(user)
+            .stream().limit(limit)
+            .map(TransactionMapper::toResponse)
+            .toList();
     }
 
+    /**
+     * KPI theo tháng: INCOME, EXPENSE, NET (projection Kpis2)
+     */
     @Transactional(readOnly = true)
     public Map<String, BigDecimal> getMonthlySummary(int month, int year) {
         User user = SecurityUtils.getCurrentUser();
-        Map<String, BigDecimal> summary = new HashMap<>();
-        for (Object[] row : transactionRepository.getMonthlySummary(user, month, year)) {
-            summary.put(((TransactionType) row[0]).name(), (BigDecimal) row[1]);
-        }
-        return summary;
+        Kpis2 r = transactionRepository.kpisByMonth(user.getId(), month, year);
+
+        BigDecimal income  = (r != null && r.getIncome()  != null) ? r.getIncome()  : BigDecimal.ZERO;
+        BigDecimal expense = (r != null && r.getExpense() != null) ? r.getExpense() : BigDecimal.ZERO;
+        BigDecimal net     = income.subtract(expense);
+
+        Map<String, BigDecimal> out = new HashMap<>();
+        out.put("INCOME",  income);
+        out.put("EXPENSE", expense);
+        out.put("NET",     net);
+        return out;
     }
 
     @Transactional(readOnly = true)
-    public Map<String, BigDecimal> getCategoryBreakdown(int month, int year) {
+    public Map<String, BigDecimal> getCategoryBreakdown(int month, int year, TransactionType type) {
         User user = SecurityUtils.getCurrentUser();
-        Map<String, BigDecimal> breakdown = new HashMap<>();
-        for (Object[] row : transactionRepository.getCategoryBreakdown(user, month, year)) {
-            breakdown.put((String) row[0], (BigDecimal) row[1]);
+        Map<String, BigDecimal> res = new HashMap<>();
+        List<LabelAmount> rows = transactionRepository.getCategoryBreakdownPg(user.getId(), month, year, type.name());
+        for (LabelAmount r : rows) {
+            res.put(r.getLabel(), r.getAmount() == null ? BigDecimal.ZERO : r.getAmount());
         }
-        return breakdown;
+        return res;
     }
 
     @Transactional(readOnly = true)
-    public Map<String, BigDecimal> getPaymentMethodBreakdown(int month, int year) {
+    public Map<String, BigDecimal> getPaymentMethodBreakdown(int month, int year, TransactionType type) {
         User user = SecurityUtils.getCurrentUser();
-        Map<String, BigDecimal> breakdown = new HashMap<>();
-        for (Object[] row : transactionRepository.getPaymentMethodBreakdown(user, month, year)) {
-            breakdown.put(((PaymentMethod) row[0]).name(), (BigDecimal) row[1]);
+        Map<String, BigDecimal> res = new HashMap<>();
+        List<LabelAmount> rows = transactionRepository.getPaymentMethodBreakdownPg(user.getId(), month, year, type.name());
+        for (LabelAmount r : rows) {
+            res.put(r.getLabel(), r.getAmount() == null ? BigDecimal.ZERO : r.getAmount());
         }
-        return breakdown;
+        return res;
     }
 
-	@Override
-	@Transactional
-	public Transaction postFromRecurring(User user, UserCategory category, BigDecimal amount, LocalDateTime when,
-			String note, PaymentMethod method, TransactionType type) {
-		 Transaction tx = new Transaction();
-		    tx.setUser(user);
-		    tx.setUserCategory(category);
-		    tx.setAmount(amount);
-		    tx.setType(type != null ? type : TransactionType.EXPENSE);
-		    tx.setPaymentMethod(method != null ? method : PaymentMethod.BANK);
-		    tx.setNote(note);
-		    tx.setTransactionDate(when);
+    @Transactional(readOnly = true)
+    public MonthlyCardsResponse getMonthlyCards(int month, int year) {
+        User user = SecurityUtils.getCurrentUser();
 
-		    return transactionRepository.save(tx);
-	}
+        Kpis3 cur = transactionRepository.kpisByMonth3(user.getId(), month, year);
+        BigDecimal income  = (cur != null && cur.getIncome()  != null) ? cur.getIncome()  : BigDecimal.ZERO;
+        BigDecimal expense = (cur != null && cur.getExpense() != null) ? cur.getExpense() : BigDecimal.ZERO;
+        BigDecimal saving  = (cur != null && cur.getSaving()  != null) ? cur.getSaving()  : BigDecimal.ZERO;
+
+        boolean savingAsOutflow = true;
+        BigDecimal myBalance = savingAsOutflow
+            ? income.subtract(expense).subtract(saving)
+            : income.subtract(expense);
+
+        int prevMonth = month == 1 ? 12 : month - 1;
+        int prevYear  = month == 1 ? year - 1 : year;
+        Kpis3 prev = transactionRepository.kpisByMonth3(user.getId(), prevMonth, prevYear);
+        BigDecimal pIncome  = (prev != null && prev.getIncome()  != null) ? prev.getIncome()  : BigDecimal.ZERO;
+        BigDecimal pExpense = (prev != null && prev.getExpense() != null) ? prev.getExpense() : BigDecimal.ZERO;
+        BigDecimal pSaving  = (prev != null && prev.getSaving()  != null) ? prev.getSaving()  : BigDecimal.ZERO;
+
+        java.util.function.BiFunction<BigDecimal, BigDecimal, BigDecimal> pct =
+            (curV, prevV) -> (prevV.signum() == 0)
+                ? BigDecimal.ZERO
+                : curV.subtract(prevV).multiply(BigDecimal.valueOf(100))
+                      .divide(prevV, 2, java.math.RoundingMode.HALF_UP);
+
+        return new MonthlyCardsResponse(
+            myBalance, income, saving, expense,
+            pct.apply(income,  pIncome),
+            pct.apply(saving,  pSaving),
+            pct.apply(expense, pExpense)
+        );
+    }
+
+    @Transactional(readOnly = true)
+    public TimeseriesResponse getTimeseries(LocalDateTime start,
+                                            LocalDateTime end,
+                                            String granularity,
+                                            String scope) {
+        User user = SecurityUtils.getCurrentUser();
+
+        List<TimeseriesRow> rows = switch ((granularity == null ? "DAILY" : granularity).toUpperCase()) {
+            case "WEEKLY"  -> transactionRepository.timeseriesWeekly(user.getId(), start, end);
+            case "MONTHLY" -> transactionRepository.timeseriesMonthly(user.getId(), start, end);
+            default        -> transactionRepository.timeseriesDaily(user.getId(), start, end);
+        };
+
+        var points = rows.stream().map(r -> {
+            String bucket      = r.getBucketLabel();
+            BigDecimal income  = r.getIncome()  == null ? BigDecimal.ZERO : r.getIncome();
+            BigDecimal expense = r.getExpense() == null ? BigDecimal.ZERO : r.getExpense();
+            return new TimeseriesPoint(bucket, income, expense, income.subtract(expense));
+        }).toList();
+
+        if (scope != null && !"ALL".equalsIgnoreCase(scope)) {
+            points = points.stream().map(p -> switch (scope.toUpperCase()) {
+                case "INCOME"  -> new TimeseriesPoint(p.date(), p.income(), BigDecimal.ZERO, p.income());
+                case "EXPENSE" -> new TimeseriesPoint(p.date(), BigDecimal.ZERO, p.expense(), p.expense().negate());
+                default -> p;
+            }).toList();
+        }
+
+        return new TimeseriesResponse(points);
+    }
+
+    // ================ Recurring posting port ================
+
+    @Override
+    @Transactional
+    public Transaction postFromRecurring(User user, UserCategory category, BigDecimal amount, LocalDateTime when,
+                                         String note, PaymentMethod method, TransactionType type) {
+        Transaction tx = new Transaction();
+        tx.setUser(user);
+        tx.setUserCategory(category);
+        tx.setAmount(amount);
+        tx.setType(type != null ? type : TransactionType.EXPENSE);
+        tx.setPaymentMethod(method != null ? method : PaymentMethod.BANK);
+        tx.setNote(note);
+        tx.setTransactionDate(when);
+        return transactionRepository.save(tx);
+    }
 }
